fix(cli) fix alignment of tags-manager on review page

--- a/client/assets/stylesheets/_type-ahead.sass
+++ b/client/assets/stylesheets/_type-ahead.sass
@@ -4,7 +4,7 @@
 
 .twitter-typeahead
   width: 100%
-  transition: opacity 0.4s
+  transition: opacity 0.2s
   margin-top: 5px
 
   .typeahead-wrap.loading
@@ -49,7 +49,7 @@
     &:hover
       cursor: pointer
       background: $red
-      transition: background-color 0.4s
+      transition: background-color 0.2s
 
       .tt-help
         color: $white
